# kalshi-btc-engine-v2

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  INSTALL.md  README.md  RUNNING.md  analyze_hold_to_expiry.py  pyproject.toml
configs/: default.json
docs/: AGENT_CHEATSHEET.md  EXPERIMENT_REGISTRY_2026_05_12.md  FINDINGS_2026_05_14.md  MASTER_HANDOFF.md  capture_burnin.md  feature_engine.md  milestone_1_2.md  milestone_4_fair_prob.md  prompt_template.md  schema.md
scripts/: _audit_engine_pnl.py  _audit_ta_pnl.py  _extract_paper_ta_trades.py  _review_ladder.py  _review_live.py  _streak_analysis.py  install_services.ps1  latency_budget.py  live_ladder_shadow.py  live_paper.py  live_paper_ta.py  live_ta.py  run_smoke.ps1  watchdog_live_ta.cmd  watchdog_paper_ta.cmd
src/kalshi_btc_engine_v2/: __init__.py  cli.py  config.py
src/kalshi_btc_engine_v2/adapters/: __init__.py  kalshi.py  spot.py
src/kalshi_btc_engine_v2/backtest/: __init__.py  backfill.py  counterfactual.py  divergence_stats.py  per_market_report.py  runner.py  state.py  (+3 more)
tests/: conftest.py  test_analysis_clis.py  test_backtest.py  test_capture_burnin.py  test_cooldowns.py  test_decision_cadence_defaults.py  test_ensemble.py  test_error_tracker.py  test_execution.py  test_fair_prob.py  test_features.py  test_live_paper_tail.py  test_monitoring_health.py  test_orderbook.py  test_passive_fill.py  test_policy.py  test_regime.py  test_risk_guards.py  test_schema_replay.py  test_spot_circuit_breaker.py  test_spot_fusion.py  test_ta_score.py  test_toxicity.py  test_vol_estimator.py  test_walk_forward.py
(+43 files in other folders)
