[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-btc-engine-v2"
version = "0.1.0"
description = "Standalone paper-first Kalshi KXBTC15M market-ecology engine foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9",
  "cryptography>=42",
  "websockets>=12",
  "pyarrow>=15",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
engine-v2 = "kalshi_btc_engine_v2.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
